kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dashboard-app
  labels:
    name: dashboard-app
    app: dashboard-app
